# BlackJack_Polytech2

./: CMakeLists.txt  croupier.cpp  croupier.h  humain.cpp  humain.h  jeu.cpp  jeu.h  joueur.cpp  joueur.h  magic.cpp  magic.h  main.cpp  rand.cpp  rand.h  resultat.txt  ret3.cpp  ret3.h  sabot.cpp  sabot.h  sabot.txt  tir16.cpp  tir16.h
